# Evalora

./: .gitignore  README.md  autoEval_proposal.docx  pyproject.toml  requirements.txt
configs/: train.yaml
experiments/21ae878e-f8db-459c-b0f5-2b0720528207/evaluation/test/metrics/: comparison_metrics.json
interface/src/: App.tsx  index.css
interface/src/components/: HuggingFaceUpload.tsx  PipelineForm.tsx  ResultsDisplay.tsx  SplashScreen.tsx
src/api/: main.py
src/api/routes/: dataset.py  evaluation.py  pipeline.py  training.py  upload_model.py
src/data/: formatter.py  preprocessor.py  splitter.py
src/evaluation/: evaluate_model.py
src/evaluation/evaluators/: evaluator.py
src/evaluation/outputs/: save_results.py
src/evaluation/parsers/: __init__.py  prediction_parser.py
src/inference/: __init__.py  predict.py  predictor.py
src/schemas/: dataset.py  evaluation.py  inference.py  pipeline.py  training.py  upload_model.py
src/services/: README.md  data_formatting_service.py  dataset_preprocessing_service.py  dataset_upload_service.py  evaluation.py  hf_uploader.py  model_loader.py  pipeline_service.py  preprocessing_service.py  tokenizer_service.py  training_service.py
src/training/: config.py  data.py  modeling.py  train.py  trainer.py
src/utils/: json_utils.py
ui/: README.md  index.html
ui/src/: App.tsx  index.css  main.tsx
ui/src/components/: HuggingFaceUpload.tsx  PipelineForm.tsx  ResultsDisplay.tsx  SplashScreen.tsx  TryModel.tsx
ui/src/lib/: api.ts
(+17 files in other folders)
