[project]
name = "autoeval"
version = "0.1.0"
description = "Rubric-based evaluator training pipeline."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "pydantic>=2.6.0",
  "uvicorn>=0.29.0",
  "python-multipart",
  "datasets>=4.8.5",
  "trl>=0.25.0",
  "transformers>=4.57.0",
  "scipy>=1.12.0",
  "pyyaml>=6.0.2",
  "peft>=0.18.0",
  "accelerate>=1.12.0",
  "unsloth>=2025.11.1",
  "zipp==4.1.0",
  "xformers>=0.0.35",
  "bert-score>=0.3.13",
  "scikit-learn>=1.4.0",
  "tqdm>=4.67.3",
]

[tool.uv]
# uv will generate uv.lock on first sync
